--- a/admin/templates/role.templ
+++ b/admin/templates/role.templ
@@ -54,7 +54,14 @@ templ RoleDescriptionForm(role models.Role) {
 	</form>
 }
 
-templ Role(role models.Role, subroles []models.Role, members []models.Member, permissions []models.SystemPermissions, mayUpdate bool) {
+templ Role(
+	role models.Role,
+	subroles []models.Role,
+	members []models.Member,
+	permissions []models.SystemPermissions,
+	mayUpdate bool,
+	mayEditInSystems map[string]struct{},
+) {
 	@RoleNameDisplay(role.ID, role.DisplayName, mayUpdate)
 	@RoleDescriptionDisplay(role.ID, role.Description, mayUpdate)
 	<h2 class="text-xl">Sub-roles</h2>
@@ -62,5 +69,5 @@ templ Role(role models.Role, subroles []models.Role, members []models.Member, pe
 	<h2 class="text-xl">Members</h2>
 	@Members(role.ID, members, mayUpdate, uuid.Nil, false)
 	<h2 class="text-xl">Permissions</h2>
-	@Permissions(role.ID, permissions)
+	@Permissions(role.ID, permissions, mayEditInSystems)
 }
