--- a/admin/templates/role.templ
+++ b/admin/templates/role.templ
@@ -60,7 +60,7 @@ templ Role(
 	members []models.Member,
 	permissions []models.SystemPermissions,
 	mayUpdate bool,
-	mayEditInSystems map[string]struct{},
+	mayAddInSystems, mayDeleteInSystems map[string]struct{},
 ) {
 	@RoleNameDisplay(role.ID, role.DisplayName, mayUpdate)
 	@RoleDescriptionDisplay(role.ID, role.Description, mayUpdate)
@@ -69,5 +69,5 @@ templ Role(
 	<h2 class="text-xl">Members</h2>
 	@Members(role.ID, members, mayUpdate, uuid.Nil, false)
 	<h2 class="text-xl">Permissions</h2>
-	@Permissions(role.ID, permissions, mayEditInSystems)
+	@Permissions(role.ID, permissions, mayAddInSystems, mayDeleteInSystems)
 }
