--- a/admin/templates/role.templ
+++ b/admin/templates/role.templ
@@ -58,9 +58,9 @@ templ Role(
 	role models.Role,
 	subroles []models.Role,
 	members []models.Member,
-	permissions []models.SystemPermissions,
-	mayUpdate bool,
-	mayAddInSystems, mayDeleteInSystems map[string]struct{},
+	permissions []models.SystemPermissionInstances,
+	mayUpdate, mayAddPermissions bool,
+	mayDeleteInSystems map[string]struct{},
 ) {
 	@RoleNameDisplay(role.ID, role.DisplayName, mayUpdate)
 	@RoleDescriptionDisplay(role.ID, role.Description, mayUpdate)
@@ -69,5 +69,5 @@ templ Role(
 	<h2 class="text-xl">Members</h2>
 	@Members(role.ID, members, mayUpdate, uuid.Nil, false)
 	<h2 class="text-xl">Permissions</h2>
-	@Permissions(role.ID, permissions, mayAddInSystems, mayDeleteInSystems)
+	@Permissions(role.ID, permissions, mayAddPermissions, mayDeleteInSystems)
 }
