--- a/ui/views/layouts.templ
+++ b/ui/views/layouts.templ
@@ -11,7 +11,7 @@ script methone(userID, loginFrontendURL string) {
 	};
 }
 
-templ Layout(userID, loginFrontendURL string) {
+templ document(userID, loginFrontendURL string) {
 	<!DOCTYPE html>
 	<html lang="sv">
 		<head>
@@ -30,14 +30,14 @@ templ Layout(userID, loginFrontendURL string) {
 					font-family: Lato;
 				}
 			</style>
-			@Body() {
+			@body() {
 				{ children... }
 			}
 		</head>
 	</html>
 }
 
-templ Body() {
+templ body() {
 	<body hx-boost="true">
 		<div class="h-[50px]" id="methone-container-replace" hx-disable hx-preserve="true"></div>
 		<main class="p-4 max-w-screen-lg mx-auto md:mt-24">
