Make links in methone be boosted

--- a/ui/views/layouts.templ
+++ b/ui/views/layouts.templ
@@ -39,7 +39,7 @@ templ document(userID, loginFrontendURL string) {
 
 templ body() {
 	<body hx-boost="true">
-		<div class="h-[50px]" id="methone-container-replace" hx-disable hx-preserve="true"></div>
+		<div class="h-[50px]" id="methone-container-replace" hx-preserve="true"></div>
 		<main class="p-4 max-w-screen-lg mx-auto md:mt-24">
 			{ children... }
 		</main>
